修复环境变量